fixes issue where multiple sparkclusters in one namespace will lead to wrong worker assignment